Opened 14 years ago

Closed 13 years ago

#7774 closed bug (fixed)

Deskbar doesn't sort application window lists in natural order

Reported by: jscipione Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Deskbar doesn't sort the list of windows in "natural" order. The easiest way to reproduce this is to open an app that has windows with numbers in them like StyleEdit or Terminal (Untitled 1, Untitled 2, etc.) and then open 10 or more windows. Then look at the Window list and the 10th window will be listed under the 1st window like

window 1
window 10
window 11
window 2
window 3
window 4
window 5
window 6
window 7
window 8
window 9

Attachments (1)

unnatural_order.png (17.3 KB ) - added by jscipione 14 years ago.

Download all attachments as: .zip

Change History (3)

by jscipione, 14 years ago

Attachment: unnatural_order.png added

comment:2 by jscipione, 13 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev43195

Note: See TracTickets for help on using tickets.