src/apps/deskbar/WindowMenuItem.cpp
@@ -39,6 +39,7 @@ All rights reserved.
 
 #include <Bitmap.h>
 #include <Debug.h>
+#include <NaturalCompare.h>
 
 #include "BarApp.h"
 #include "BarMenuBar.h"
@@ -132,7 +133,7 @@ TWindowMenuItem::SetLabel(const char* string)
 			Frame().Width() - contLoc.x - 3.0f);
 	}
 
-	if (strcmp(Label(), truncatedTitle.String()) != 0)
+	if (strcasecmp(Label(), truncatedTitle.String()) != 0)
 		BMenuItem::SetLabel(truncatedTitle.String());
 }
 
@@ -148,13 +149,18 @@ TWindowMenuItem::FullTitle() const
 TWindowMenuItem::InsertIndexFor(BMenu* menu, int32 startIndex,
 	TWindowMenuItem* newItem)
 {
-	for (int32 index = startIndex;; index++) {
+	int32 index = 0;
+
+	for (index = startIndex;; index++) {
 		TWindowMenuItem* item
 			= dynamic_cast<TWindowMenuItem*>(menu->ItemAt(index));
-		if (item == NULL
-			|| strcasecmp(item->FullTitle(), newItem->FullTitle()) > 0)
+		if (item == NULL || NaturalCompare(item->FullTitle(),
+				newItem->FullTitle()) > 0)
 			return index;
 	}
+
+	// we should never get here
+	return index;
 }
 
 
